Fix hyperlink color in dark mode

--- a/static/css/dark_mode.css
+++ b/static/css/dark_mode.css
@@ -9,4 +9,5 @@
     --button-color: #330033;
     --button-text-color: white;
     --body-font: 'Roboto', Arial, sans-serif;
+    --hyperlink-color: white;
 }
