--- a/static/css/light_mode.css
+++ b/static/css/light_mode.css
@@ -9,4 +9,5 @@
     --button-color: #666666;
     --button-text-color: white;
     --body-font: 'Roboto', Arial, sans-serif;
+    --hyperlink-color: blue;
 }
