--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,8 @@
+a {
+    color: var(--hyperlink-color);
+}
+
+
 header, footer {
     box-sizing: border-box;
     width: 100%;
